--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -21,5 +21,8 @@
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
   </p>
-
+  <input type="text" [(ngModel)]="key">
+  <input type="text" [(ngModel)]="value">
+  <button (click)="addValue()" >Add Value</button>
+  <button (click)="removeValue()">Get Value</button>
 </ion-content>
