--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -1,18 +1,20 @@
 <ion-header>
   <ion-navbar>
-    <button menuToggle *ngIf="!selectedItem">
+    <button menuToggle *ngIf="!selectedPage">
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Item Details</ion-title>
+    <ion-title>{{selectedTitle}}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <h3 text-center *ngIf="selectedItem">
-    {{selectedItem.title}}
-    <ion-icon [name]="selectedItem.icon"></ion-icon>
-  </h3>
-  <h4 text-center *ngIf="selectedItem">
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </h4>
+  <ion-list>
+    <div *ngFor="let key of keys">
+      <button ion-item (click)="itemTapped($event, key)">
+      <ion-icon name="" item-left></ion-icon>
+      <span>{{key}}</span>
+     </button>
+     <ion-icon name="star-outline" (click)="favClick($event)"></ion-icon>
+    </div>
+  </ion-list>
 </ion-content>
