--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -3,18 +3,14 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>My First List</ion-title>
+    <ion-title>{{selectedSong.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon name="{{item.icon}}" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
+    <img [attr.src]="imageSrc"/>
+    <div [innerHTML]='selectedPallavi'></div>
+    <div [innerHTML]='selectedSaranam'></div>
   </ion-list>
 </ion-content>
