--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="card-background-page">
+<ion-content class="card-background-page"  overflow-scroll="true">
   <ion-card class="thumbnail" *ngFor="let page of pages;let $isOdd=odd;let $isEven=even" (click)="itemTapped($event, page)">
     <ion-card-content>
       <div class="card-title">{{page.title}}</div>
