--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,21 +7,39 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content overflow-scroll="true">
   <ion-searchbar animated="true" placeholder="பாடல்/கவிதை தேடல்" [(ngModel)]="myInput" [showCancelButton]="false" (ionInput)="onInput($event)"
     (ionCancel)="onCancel($event)">
   </ion-searchbar>
-  <ion-card *ngIf="serachResult.length && myInput">
-    <ion-card-header>
-      <ion-icon name="information-circle"></ion-icon>
-      தேடல் முடிவுகள் ({{serachResult.length}})
-    </ion-card-header>
-    <ion-list>
-      <button ion-item *ngFor="let song of serachResult" (click)="itemTapped($event, song)">
-                  <ion-icon name="musical-note" item-start></ion-icon>
-                  {{song.songName}}
-                </button>
-    </ion-list>
-  </ion-card>
+  <div *ngIf="isSearching" class="spinner-container">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
+  <div *ngIf="serachResult.length && searchKeyWord && !isSearching">
+    <ion-card>
+      <ion-card-header>
+        <ion-icon name="information-circle"></ion-icon>
+        <div>
+          தேடல் முடிவுகள் ({{serachResult.length}})</div>
+      </ion-card-header>
+      <ion-card-content>
+      <ion-list>
+        <button ion-item *ngFor="let song of serachResult" (click)="itemTapped($event, song)">
+          <ion-icon name="musical-note" item-start></ion-icon>
+          {{song.songName}}
+        </button>
+      </ion-list>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <div *ngIf="!serachResult.length && searchKeyWord && !isSearching" class="info">
+    <ion-icon name="md-search"></ion-icon>
+    <div class="message"> நீங்கள் தேடிய - {{searchKeyWord}} - எந்தொரு பாடலுடனோ  கவிதைவுடனோ பொருந்தவில்லை
+    </div>
+  </div>
+  <div class="info" *ngIf="!searchKeyWord && !isSearching">
+    <ion-icon name="md-search"></ion-icon>
+    <div class="message"> குறைந்தபட்சம் மூன்று எழுத்துக்களை தட்டச்சு பண்ணவும்.
+    </div>
+  </div>
 
 </ion-content>
