--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>தேடல் பக்கம்</ion-title>
+    <ion-title>{{ 'SEARCH' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
