--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>பாரதியார் கவிதைகள்</ion-title>
+    <ion-title>{{ 'TITLE' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
