--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -3,13 +3,13 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{ 'ABOUT' | translate }}</ion-title>
+    <ion-title>{{ 'FAV' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content overflow-scroll="true">
 
-  <ion-title #subHeader id="subHeader" class="secondary" text-center>{{ 'FAV' | translate }}</ion-title>
+  <!--<ion-title #subHeader id="subHeader" class="secondary" text-center>{{ 'FAV' | translate }}</ion-title>-->
   <ion-card *ngIf="favArray.length">
     <ion-list>
       <ion-item-sliding class="item-remove-animate" #slidingItem (ionSwipe)="removeFromFav(song,$index,slidingItem)" *ngFor="let song of favArray; let $index = index;"
@@ -21,7 +21,7 @@
         <ion-item-options side="right">
           <button ion-button color="danger" expandable (click)="removeFromFav(song,$index,slidingItem)">
             <ion-icon name="md-trash"></ion-icon>
-            நீக்கு
+            {{'remove' | translate }}
           </button>
         </ion-item-options>
       </ion-item-sliding>
@@ -30,8 +30,10 @@
   <div class="info" *ngIf="!favArray.length">
     <ion-icon name="star"></ion-icon>
     <div class="message">
-      பிடித்தமான பாடல் என்று எதையும் நீங்கள் இன்னும் குறிக்கவில்லை.
+      {{'no_fav_msg' | translate}}
     </div>
   </div>
-
+  <ion-fab right bottom>
+      <button ion-fab (click)="openSearch()"><ion-icon ios="ios-search" md="md-search"></ion-icon></button>
+    </ion-fab>
 </ion-content>
