--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -8,7 +8,7 @@
 
 </ion-header>
 
-<ion-content overflow-scroll="true" (click)="closeFab(fab, $event)" [class.shake]="isShake" (ionScroll)="onScroll($event)">
+<ion-content overflow-scroll="true" (click)="closeFab(fab, $event)" [class.shake]="isShake" (ionScroll)="onScroll($event)" tappable>
   <div (swipe)="swipeEvent($event)">
     <ion-list>
       <div>
