--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -8,17 +8,17 @@
 </ion-header>
 
 <ion-content overflow-scroll="true">
-  <ion-card-header>Language</ion-card-header>
-  <ion-card-content>
-    <ion-list radio-group [(ngModel)]="selectedLanguage">
-      <ion-item>
-        <ion-label>Tamil</ion-label>
-        <ion-radio value="ta" (ionSelect)="onLanguageChange('ta')"></ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-label>English</ion-label>
-        <ion-radio value="en" (ionSelect)="onLanguageChange('en')" checked></ion-radio>
-      </ion-item>
-    </ion-list>
-  </ion-card-content>
+  <ion-list radio-group [(ngModel)]="selectedLanguage">
+    <ion-list-header>
+        {{ 'settings_lang' | translate }}
+    </ion-list-header>
+    <ion-item>
+      <ion-label>{{ 'tamil' | translate }}</ion-label>
+      <ion-radio value="ta" (ionSelect)="onLanguageChange('ta')"></ion-radio>
+    </ion-item>
+    <ion-item>
+      <ion-label>{{ 'english' | translate }}</ion-label>
+      <ion-radio value="en" (ionSelect)="onLanguageChange('en')" checked></ion-radio>
+    </ion-item>
+  </ion-list>
 </ion-content>
