--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -19,6 +19,6 @@
   </ion-card>
 
   <ion-fab right bottom>
-    <button ion-fab (click)="openSearch()"><ion-icon ios="ios-search" md="md-search"></ion-icon></button>
+    <button ion-fab (tap)="openSearch()"><ion-icon ios="ios-search" md="md-search"></ion-icon></button>
   </ion-fab>
 </ion-content>
