--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -11,7 +11,7 @@
   <ion-title #subHeader id="subHeader" class="secondary" text-center>{{selectedTitle}}</ion-title>
   <ion-list class="accordion">
     <ion-card *ngFor="let songsList of selectedChapters;">
-      <ion-card-header (tap)="songsList.show = !songsList.show" tappable>
+      <ion-card-header (click)="songsList.show = !songsList.show" tappable>
 
         <ion-icon name="ios-folder-outline" float-left></ion-icon>
         <div class="accordionHeading"> {{songsList.name}} ({{songsList.songs.length}})</div>
@@ -21,16 +21,10 @@
 
       <ion-list [class.close]="!songsList.show" [class.open]="songsList.show">
         <ion-item-sliding #item *ngFor="let song of songsList.songs; let $index = index">
-          <!--<ion-item-options side="right">
-            <button ion-button (tap)="favClick(item, song.index)">
-                    <ion-icon ios="ios-heart" md="md-heart" isActive="true" class="favorite"></ion-icon></button>
-            <button ion-button (tap)="shreUsingShareSheet(item, song)">
-                        <ion-icon name="share" class="share"></ion-icon></button>
-          </ion-item-options>-->
           <button ion-item (tap)="itemTapped($event, song.index)">
-                <ion-icon name="book" item-start></ion-icon>
-                {{song.name}}
-              </button>
+            <ion-icon name="book" item-start></ion-icon>
+            {{song.name}}
+          </button>
         </ion-item-sliding>
       </ion-list>
     </ion-card>
@@ -40,30 +34,22 @@
         <ion-icon name="ios-folder-outline" float-left></ion-icon>
         <div class="accordionHeading"> மற்றவை ({{selectedSongs.length}})</div>
         <ion-icon float-right [name]="showOtherSongList ? 'remove': 'add'"></ion-icon>
-       
+
       </ion-card-header>
       <ion-list [class.close]="!showOtherSongList" [class.open]="showOtherSongList">
         <ion-item-sliding #item *ngFor="let key of selectedSongs; let $index = index;">
-          <!--<ion-item-options side="right">
-            <button ion-button (tap)="favClick(item, key.index)">
-                  <ion-icon ios="ios-heart" md="md-heart" isActive="true" class="favorite active"></ion-icon></button>
-            <button ion-button (tap)="shreUsingShareSheet(item, key)">
-                      <ion-icon name="share" class="share"></ion-icon></button>
-          </ion-item-options>-->
           <button ion-item (tap)="itemTapped($event, key.index)">
-                    <ion-icon name="book" item-start></ion-icon>
-                    {{key.name}}
-                  </button>
+            <ion-icon name="book" item-start></ion-icon>
+            {{key.name}}
+          </button>
         </ion-item-sliding>
       </ion-list>
     </ion-card>
   </ion-list>
-  <!--  <ion-fab top right>
-
-    <button [hidden]="!backToTopVisible" ion-fab (tap)="scrollToTop()"><ion-icon ios="ios-arrow-dropup-circle" md="md-arrow-dropup-circle"></ion-icon></button>
-  </ion-fab> -->
 
   <ion-fab bottom right>
-    <button ion-fab (tap)="openSearch()"><ion-icon name="search"></ion-icon></button>
+    <button ion-fab (tap)="openSearch()">
+      <ion-icon name="search"></ion-icon>
+    </button>
   </ion-fab>
 </ion-content>
