demo screens, performance improvements

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -37,4 +37,5 @@
       </button>
     </div>
   </div>
+  <demo-page *ngIf="showDemo" [showLeft]="showLeft" [demoSettingsObj]="demoSettingsObj" (swipeEvent)="swipeEvent($event)"></demo-page>
 </ion-content>
